--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".MainActivity">
-
-<SurfaceView
-    android:id="@+id/surface_view"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    android:layout_marginTop="100dp"
-    />
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
-<TextView
-    android:id="@+id/barcode_text"
-    android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:layout_marginLeft="30dp"
-    android:layout_marginRight="30dp"
-    app:layout_constraintTop_toBottomOf="@id/surface_view"
-    android:layout_marginTop="50dp"
-    android:text="Barcode Text"
-    android:textSize="25sp"
-    android:padding="5dp"/>
+    <SurfaceView
+        android:id="@+id/surface_view"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/barcode_text"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="30dp"
+        android:padding="5dp"
+        android:text=""
+        android:textSize="25sp"
+        app:layout_constraintTop_toBottomOf="@id/surface_view" />
+
+    <Button
+        android:id="@+id/clickbutton"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        tools:layout_editor_absoluteX="105dp"
+        tools:layout_editor_absoluteY="564dp"
+        android:text="Return to Game"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
